@@ -5,7 +5,8 @@ Change History
 ==================
 
 - Better Windows compatibility in test infrastructure.
-
+- Now the bootstrap.py has an optional --version argument,
+  that can be used to force zc.buildout version to use.
 
 1.2.1 (2009-03-18)
 ==================
